--- a/date/2025-06/page-3.htm
+++ b/date/2025-06/page-3.htm
@@ -125,6 +125,20 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-10-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="6月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-10-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、韩国、欧洲、香港、美国、日本、加拿大等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-06-09">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-6-9-node-share.htm" class="xcblog-blog-url">
@@ -261,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-25-node-share.htm" title="5月25日→19M/S|2025年最新免费节点Sockscap64订阅链接地址">5月25日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-3-node-share.htm" title="6月3日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月3日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-15-free-node-subscribe.htm" title="5月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-node-share.htm" title="5月31日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">5月31日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-111164.htm" title="docker之SonarQube安装">docker之SonarQube安装</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-7-free-subscribe-node.htm" title="5月7日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月7日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-high-speed-nodes.htm" title="5月22日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月22日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-13-node-share-links.htm" title="6月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">6月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-4-node-share-links.htm" title="7月4日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月4日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-19-free-node-subscribe.htm" title="6月19日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">6月19日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-29-node-share.htm" title="6月29日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月29日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-1-free-high-speed-nodes.htm" title="6月1日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月1日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-25-node-share.htm" title="6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-4-free-subscribe-node.htm" title="6月4日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">6月4日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-10-free-subscribe-node.htm" title="5月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">5月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" title="6月15日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">6月15日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-5-free-node-subscribe-links.htm" title="6月5日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">6月5日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-8-free-subscribe-node.htm" title="6月8日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月8日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-6-node-share-links.htm" title="6月6日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月6日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -282,10 +296,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
