--- a/free-nodes/2025-6-29-node-share.htm
+++ b/free-nodes/2025-6-29-node-share.htm
@@ -153,6 +153,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-6-28-node-share.htm">6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-6-30-free-subscribe-node.htm">6月30日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -181,16 +182,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-18-free-node-subscribe.htm" title="5月18日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">5月18日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-15-free-node-subscribe.htm" title="5月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-29-node-share-links.htm" title="5月29日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">5月29日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-7-node-share.htm" title="6月7日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址">6月7日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-node-subscribe.htm" title="6月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">6月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-8-free-subscribe-node.htm" title="6月8日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月8日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-4-node-share-links.htm" title="7月4日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月4日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-6-node-share-links.htm" title="6月6日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月6日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-24-node-share-links.htm" title="6月24日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">6月24日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-29-node-share.htm" title="6月29日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月29日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-20-free-node-subscribe-links.htm" title="6月20日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">6月20日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-28-node-share.htm" title="6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-23-free-node-subscribe.htm" title="5月23日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">5月23日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-1-free-high-speed-nodes.htm" title="6月1日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月1日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-110316.htm" title="tensorflow求导和梯度计算">tensorflow求导和梯度计算</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-25-node-share.htm" title="6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-3-node-share.htm" title="6月3日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月3日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-7-node-share.htm" title="7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -202,10 +203,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
