--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -121,6 +121,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-25">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-25-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-25-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、新加坡、日本、香港、韩国、加拿大、欧洲等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-24">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-24-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="6月24日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-24-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月24日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、香港、加拿大、欧洲、韩国、新加坡、日本等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-23">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-23-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="6月23日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-23-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月23日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、新加坡、美国、欧洲、香港、日本、加拿大等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-22">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="6月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、欧洲、韩国、美国、日本、加拿大、新加坡等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-21">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-21-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="6月21日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-21-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月21日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、加拿大、韩国、美国、欧洲、日本、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-20">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-20-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="6月20日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-20-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月20日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、新加坡、韩国、欧洲、日本、香港、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-06-19">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-6-19-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -177,92 +261,8 @@
                                     这一次的节点更新覆盖了韩国、日本、欧洲、新加坡、香港、美国、加拿大等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-06-15">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="6月15日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">6月15日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、香港、欧洲、新加坡、美国、韩国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-06-14">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-6-14-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="6月14日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-6-14-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">6月14日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、韩国、日本、新加坡、欧洲、美国、香港等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-06-13">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-6-13-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="6月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-6-13-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">6月13日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、韩国、欧洲、香港、美国、日本、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-06-12">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-6-12-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="6月12日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-6-12-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">6月12日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、日本、香港、韩国、加拿大、新加坡、欧洲等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-06-11">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-6-11-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="6月11日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-6-11-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">6月11日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、日本、美国、香港、欧洲、韩国、加拿大等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-06-10">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-6-10-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="6月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-6-10-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">6月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、韩国、欧洲、香港、美国、日本、加拿大等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -271,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-28-node-share.htm" title="6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-21-free-node-subscribe.htm" title="6月21日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">6月21日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-11-free-high-speed-nodes.htm" title="5月11日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">5月11日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-node-share.htm" title="5月31日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">5月31日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-5-node-share.htm" title="5月5日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">5月5日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe-links.htm" title="6月12日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月12日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-25-node-share.htm" title="6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">6月25日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-6-node-share-links.htm" title="6月6日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月6日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-18-free-node-subscribe.htm" title="5月18日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">5月18日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-1-free-high-speed-nodes.htm" title="6月1日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月1日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-5-free-node-subscribe-links.htm" title="6月5日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">6月5日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-7-node-share.htm" title="6月7日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址">6月7日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-23-free-subscribe-node.htm" title="6月23日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月23日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-20-free-node-subscribe-links.htm" title="6月20日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">6月20日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-6-node-share.htm" title="5月6日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月6日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-4-free-subscribe-node.htm" title="6月4日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">6月4日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" title="6月15日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">6月15日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-28-node-share.htm" title="6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">6月28日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -292,10 +292,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
